--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+changes in version 1.7.2 (2020-01-06)
+
+- Open-source release, no functionality changes.
+
+
 changes in version 1.7.1 (2018-09-11)
 
 - gthbssmtrain gives an error if no donor or acceptor sites were found.
