--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+changes in version 1.7.3 (2020-01-08)
+
+- Include GenomeThreader related code from GenomeTools.
+
+
 changes in version 1.7.2 (2020-01-06)
 
 - Open-source release, no functionality changes.
